# deadpool

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
benches/: managed.rs
src/: array_queue.rs  builder.rs  config.rs  errors.rs  lib.rs  metrics.rs  object.rs  pool.rs
src/managed/: mod.rs
sync/src/: reexports.rs
tests/: managed.rs  managed_cancellation.rs  managed_deadlock.rs  managed_timeout.rs  managed_unreliable_manager.rs
