[package]
name = "deadpool"
version = "0.9.5"
edition = "2018"
resolver = "2"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
description = "Dead simple async pool"
keywords = ["async", "database", "pool"]
license = "MIT/Apache-2.0"
repository = "https://github.com/bikeshedder/deadpool"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# crossbeam-queue = { git = "https://github.com/conradludgate/crossbeam", rev = "97706f4c3a6852e2f4de5c46fd4623366feb436d" }
crossbeam-queue = "0.3.6"
num_cpus = "1.11.1"
retain_mut ="0.1.6"
# `managed` feature
async-trait = { version = "0.1.17" }
# The dependency of tokio::sync is non-optional. Deadpool depends on
# `tokio::sync::Semaphore`. No other features of `tokio` are enabled or used
# unless the `rt_tokio_1` feature is enabled.
tokio = { version = "1.0", features = ["sync", "time"] }

[dev-dependencies]
async-std = { version = "1.0", features = ["attributes"] }
config = { version = "0.13", features = ["json"] }
criterion = { version = "0.3.4", features = ["html_reports", "async_tokio"] }
itertools = "0.10.3"
tokio = { version = "1.5.0", features = ["macros", "rt", "rt-multi-thread", "time"] }

[[bench]]
name = "managed"
harness = false

